# HypernetTest

./: .gitignore  README.md
ApproximationTest/: ApproximationAlgorithm.cpp  CMakeLists.txt  Funcs.h  Globals.h  Hypernet.cpp  Hypernet.h  Main.cpp  PairConnectivity.cpp
CumulativeTest/: CMakeLists.txt  Hypernet.h  Main.cpp  Route.h
Documents/: HypernetTest.xlsx  MPIHypernetTest.xlsx
HypernetTest/: ApplicationSettings.h  Branch.cpp  Branch.h  CMakeLists.txt  ComputeAPC.h  FullEnumeration.cpp  Funcs.h  GenCombinations.cpp  Globals.h  Hypernet.cpp  Hypernet.h  Main.cpp  PairConnectivity.cpp  RandomHypernet.cpp  Route.h  Tests.cpp
HypernetTest/HypernetBase/: Branch.cpp  Branch.h  Element.h  FactorizationHelpers.cpp  Hypernet.cpp  Hypernet.h  IIdentity.h  Node.cpp  Node.h  Reductions.cpp  Route.cpp  Route.h  Stdafx.h
MPIHypernetTest/: ApplicationSettings.h  Branch.h  CMakeLists.txt  DTO.h  Funcs.h  Globals.h  Hypernet.h  Main.cpp  PairConnectivity.cpp  RandomHypernet.cpp  Route.h  SerializationExtensions.h  Stdafx.h
MPIHypernetTest/HypernetBase/: Branch.cpp  Branch.h  Hypernet.cpp  Hypernet.h  IIdentity.h  Node.cpp  Node.h  Reductions.cpp  Route.h  Stdafx.h
documents/Гранч/: tests.xlsx  Введение_v2.docx
documents/Гранч/Заметки/: заметки-1.docx
documents/Гранч/Схемы расположения и подключения/TestNet/: data.txt
documents/Гранч/Схемы расположения и подключения/План расположения ТС, часть 1 (упрощённый)/: data.txt
documents/Гранч/заметки/: заметки-2.docx  заметки-3.docx
documents/тесты/: ApproximationTest.xlsx  MPIHypernetTest.xlsx  OpimizationTest.xlsx
src/: CMakeLists.txt
src/ApproximationTest/: Funcs.h  Main.cpp  Stdafx.h
src/ApproximationTest/inputs/: Hstar(9, 12, 8).txt  ex6.1.txt
src/CumulativeTest/: Branch.cpp  Branch.h  Funcs.h  Globals.h  Hypernet.cpp  PairConnectivity.cpp
src/CumulativeTest/inputs/: Hcycle1(9, 12, 9).txt  ex5.2.txt
src/HypernetModel/: Branch.cpp  Branch.h  Hypernet.cpp  Hypernet.h  IIdentity.cpp  IIdentity.h  Node.cpp  Node.h  Operators.h
src/HypernetModel/Generators/: RandomHypernetGenerator.cpp  RandomHypernetGenerator.h
src/HypernetModel/Helpers/: DataHelper.cpp  DataHelper.h  FactorizationHelper.cpp  InputParser.h  RandomHypernetGenerator.cpp  RandomHypernetGenerator.h  RandomHypernetHelper.cpp  RandomHypernetHelper.h  ReductionHelper.cpp  Settings.h
src/HypernetTest/: ApplicationSettings.h  ApproximationAlgorithm.cpp  CMakeLists.txt  ComputeAPC.h  ComputeMENC.h  FullEnumeration.cpp  Funcs.h  Globals.h  Main.cpp  PairConnectivity.cpp  Tests.cpp
src/HypernetTest/HypernetBase/: Node.h  Operators.h
src/HypernetTest/inputs/: TreeInGrid(9, 12, 0).txt
src/HypernetTest/inputs/generation/: TransportNetwork(53, 60, 0).txt  TreeInGrid(16, 24, 0).txt  TreeInGrid(25, 40, 0).txt  TreeInGrid(9, 12, 0).txt
src/HypernetTest/inputs/old/: ex3.6.txt
src/HypernetTest/inputs/tests/: CycleInGrid1(9, 12, 9).txt  RandomHypernet(6, 7, 8).txt  RandomHypernet(9, 12, 12).txt  RandomHypernet(9, 12, 16).txt  TreeInGrid(16, 24, 15).txt  TreeInGrid(25, 40, 24).txt  TreeInGrid(9, 12, 8).txt  WheelInGrid(9, 12, 16).txt
src/MPIHypernetTest/: ApplicationSettings.h  CMakeLists.txt  DTO.h  Funcs.h  Globals.h  Main.cpp  PairConnectivity.h  RandomHypernet.cpp  RandomKPHypernetGenerator.h  RandomNetworkHypernetGenerator.cpp  SerializationExtensions.h
src/MPIHypernetTest/HypernetBase/: Hypernet.cpp  Node.h
src/MPIHypernetTest/inputs/: Mine(58, 81, 0, 5).txt  TransportNetwork(53, 60, 58).txt
src/MPIHypernetTest/inputs/tests/: RandomHypernet(9, 12, 12).txt
src/OptimizationTest/: ApplicationSettings.h  CMakeLists.txt  FullEnumerationAlgorithm.cpp  FullEnumerationAlgorithm.h  Funcs.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Globals.h  Main.cpp  Model .h  Model.cpp  RandomHypernet.cpp  RandomNetworkHypernetGenerator.cpp  RandomNetworkHypernetGenerator.h  SimulatedAnnealingAlgorithm.cpp  SimulatedAnnealingAlgorithm.h  Stdafx.h
src/OptimizationTest/inputs/: DemoHypernet(9, 10, 8).txt  Hypernet(16, 21, 15).txt  Hypernet(16, 24, 17).txt  Hypernet(16, 9, 3).txt  Hypernet(25, 25, 10).txt  Hypernet(25, 38, 27).txt  Hypernet(9, 10, 11).txt  Hypernet(9, 10, 9).txt  Hypernet(9, 2, 1).txt  Hypernet(9, 3, 1).txt  OptimizationHypernet(16, 21, 15).txt  OptimizationHypernet(25, 38, 27).txt  OptimizationHypernet(9, 10, 11).txt  TreeInGrid(25, 40, 0).txt  TreeInGrid(9, 12, 0, 3).txt
Документы/отчёты/: Otchyot_po_etapu_2.docx  Отчёт по этапу 1.docx
Документы/тесты/: CumulativeTest.xlsx  GraphTest.xlsx  HypernetTest.xlsx  MPIHypernetTest.xlsx
